--- a/_posts/Highlights/2017-03-11-toadfish.md
+++ b/_posts/Highlights/2017-03-11-toadfish.md
@@ -14,8 +14,7 @@ categories:
 comments: true
 show_meta: false
 ---
-<br> 
- As part of our ongoing work <a href='https://carolinafishes.github.io/highlights/brains/'>on teleost neuro-biology</a> I have been obtaining fish samples from various state agencies along the Atlantic Coast. I was picking up samples from Richard Wong at Delaware Fish and Wildlife and we got into a pretty cool conversation about the unusual biology of oyster toadfish.
+<br> As part of our ongoing work <a href='https://carolinafishes.github.io/highlights/brains/'>on teleost neuro-biology</a> I have been obtaining fish samples from various state agencies along the Atlantic Coast. I was picking up samples from Richard Wong at Delaware Fish and Wildlife and we got into a pretty cool conversation about the unusual biology of oyster toadfish.
  <br>
  <br> 
  These fish are wierd. Not only are they one of the few animals we have brought into outer space, but they have the fastest twitching muscles of any vertebrates. Toadfish use these muscles to vibrate a highly modified swimbladder to call to each other. Males take this to the extreme and use an expanded swimbladder to make a boatwhistle call that can be heard at the surface. Not surprisingly, these fishes that like to hang out under docks have been used for physiological experiments for over 100 years and are incredibly well studied. The high levels of investment in unusual physiology in toadfish raised the question of whether there are trade-offs with other organs. 
@@ -57,6 +56,6 @@ This adds our study to the growing number of studies that have failed to recover
  We don't argue against the ETH, but it is striking that much of the evidence comes from carefully controlled lab experiments. This suggests that while trade-offs are probably real, wild animals have evolved strategies to mitigate the energetic costs of exaggerated traits. Expanding beyond the ETH is likely to herald some really fundamental insights into the relationship of energetic trade-offs, ecology, and sexual selection in shaping other aspects of organismal form.
 <br>
 <br>
-Interested in more detail? <a href='https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.3835'>You can check out our resulting manuscript here!</a></em>.
+Interested in more detail? <a href='https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.3835'>You can check out our resulting manuscript here!</a>.
 <br>
 
