--- a/_posts/Highlights/2017-03-11-toadfish.md
+++ b/_posts/Highlights/2017-03-11-toadfish.md
@@ -56,6 +56,6 @@ This adds our study to the growing number of studies that have failed to recover
  We don't argue against the ETH, but it is striking that much of the evidence comes from carefully controlled lab experiments. This suggests that while trade-offs are probably real, wild animals have evolved strategies to mitigate the energetic costs of exaggerated traits. Expanding beyond the ETH is likely to herald some really fundamental insights into the relationship of energetic trade-offs, ecology, and sexual selection in shaping other aspects of organismal form.
 <br>
 <br>
-Interested in more detail? <a href='https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.3835'>You can check out our resulting manuscript here!</a>.
+Interested in more detail? <a href='https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.3835'>You can check out our resulting manuscript here!</a>
 <br>
 
