--- a/_posts/Highlights/2017-03-11-toadfish.md
+++ b/_posts/Highlights/2017-03-11-toadfish.md
@@ -20,7 +20,8 @@ show_meta: false
  These fish are wierd. Not only are they one of the few animals we have brought into outer space, but they have the fastest twitching muscles of any vertebrates. Toadfish use these muscles to vibrate a highly modified swimbladder to call to each other. Males take this to the extreme and use an expanded swimbladder to make a boatwhistle call that can be heard at the surface. Not surprisingly, these fishes that like to hang out under docks have been used for physiological experiments for over 100 years and are incredibly well studied. The high levels of investment in unusual physiology in toadfish raised the question of whether there are trade-offs with other organs. 
  <br>
  <br>
- <img class="b30" src="http://carolinafishes.github.io/images/toadfish1.png" alt=""><em> Figure 1. Illustration of an oyster toadfish by Katerina Zapfe </em>
+ <img class="b30" src="http://carolinafishes.github.io/images/toadfish1.png" alt=""><em> 
+ <br>Figure 1. Illustration of an oyster toadfish by Katerina Zapfe </em>
  <br>
  <br>
  When I got the fish back to the lab our conversation continued and we began to think about how differential changes in organ investment between male and female toadfish might come with hidden costs. I talked to <a href='https://www.researchgate.net/profile/Teresa_Iglesias'>Teresa Iglesias</a> and <a href='https://danlwarren.wordpress.com/'> Dan Warren</a> about their recent paper  <a href='https://www.ncbi.nlm.nih.gov/pubmed/22507754'>testing expectations of the 'expensive tissue hypothesis' in wrasses.</a>. 
