new bio for Kat

--- a/_posts/Highlights/2017-04-15-brains.md
+++ b/_posts/Highlights/2017-04-15-brains.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "Circadian Rhythms Shape The Vertebrate Brain"
+title: "Circadian rhythms shape the vertebrate brain"
 teaser: "Changes in light shape fish brain evolution"
 header:
     image_fullwidth: "Okinawa_banner.jpg"
