--- a/_posts/Highlights/2015-10-20-Media.md
+++ b/_posts/Highlights/2015-10-20-Media.md
@@ -14,6 +14,18 @@ comments: true
 show_meta: false
 ---
  
+<h3>2019</h3>
+<br> Online Press
+<br>
+<br><i> Life in ice mirrors human disease</i>
+<br><a href="https://www.sciencedaily.com/releases/2019/06/190610215605.htm"> <en>Science Daily</en></a>
+<br><a href="https://www.upi.com/Science_News/2019/06/11/Fish-adaptations-in-Antarctica-mirror-the-development-of-human-bone-disease/3891560257058/"> <en>UPI</en></a>
+<br><a href="https://www.natureworldnews.com/articles/41404/20190611/life-in-antarcticas-ice-mirrors-human-disease.htm"> <en>Natureworldnews</en></a>
+<br><a href="https://phys.org/news/2019-06-life-antarctica-ice-mirrors-human.html"> <en>Phys.org</en></a>
+<br><a href="https://onties.com/argentina/life-in-the-antarctic-ice-is-a-reflection-of-human-disease/"> <en>Onties (Argentina)</en></a>
+<br><a href="https://worldnewsbuz.com/life-in-antarcticas-ice-mirrors-human-disease-sciencedaily/"> <en>Worldnewsbuz</en></a>
+<br><a href="https://debatableape.com/life-in-antarcticas-ice-mirrors-human-disease-phys-org/"> <en>Debateable Ape</en></a>
+
 <h3>2018</h3>
 <br> Online Press
 <br>
