--- a/_posts/Pubs/2015-01-07-reprints.md
+++ b/_posts/Pubs/2015-01-07-reprints.md
@@ -17,17 +17,36 @@ header:
 permalink: "/Pubs/reprints/"
 show_meta: false
 ---
+<h3>2019</h3>
+
+<br>Daane, J.M., Dornburg, A., Smits, P., MacGuigan, D.J., Hawkins, M.B., Near, T.J., Detrich, H.W., Harris, M.P. Historical contingency shapes adaptive radiation in Antarctic fishes. Nature Ecology and Evolution
+<a href="http://carolinafishes.github.io/images/Daane_et_al2019.pdf"> <en>pdf</en></a>
+<a href="https://www.biorxiv.org/content/biorxiv/early/2018/11/26/478842.full.pdf"> <en>BioRxiv</en></a>
+
+<br>Field, D., Berv, J.S., Hsiang, A. Y., Lanfear, R., Landis, M.J., Dornburg, A. Timing the extant avian radiation: the rise of modern birds and the importance of modelling molecular rate variation. Bulletin of the American Museum of Natural History (accepted)
+<a href="https://peerj.com/preprints/27521/"> <en>PeerJ preprint</en></a>
+
+<br>Phillips, A.J., Dornburg, A., Zapfe, K., James, S.W., Erseus, C., Anderson, F., Lemmon, A., Lemmon, E.M., Holland, S., Williams, B.W. Phylogenomic analysis of a putative missing link sparks reinterpretation of leech evolution. Submitted to Genome Biology and Evolution (accepted)
+
+<br>Near, T.J., Ghezelayagh, A., Ojeda, F.P., Dornburg, A. Recent diversification in an ancient lineage of Notothenioid fishes. Polar Biology 42: 943—952 
+<a href="http://carolinafishes.github.io/images/Near_et_alInPressBovichtus.pdf"> <en>pdf</en></a>
+
+<br>Parker, C.E., Dornburg, A., Domínguez-Domínguez, O., Pillar, K.R. Evidence of Bias? Assessing phylogenetic information to reveal uncertainty in historical data: an example using goodeines (Teleostei: Cyprinodontiformes: Goodeidae). Molecular Phylogenetics and Evolution 134: 282—290
+<a href="http://carolinafishes.github.io/images/Parker_et_al_2019.pdf"> <en>pdf</en></a>
+
+<br>Dornburg,A. Lamb, A.D., Warren, D. Watkins-Colwell, G., Lewbart, G.,Flowers, J. Are geckos paratenic hosts for Caribbean Island Acanthocephalans? Evidence from <i>Gonatodes antillensis</i> and a review of squamate reptiles acting as transport hosts. Peabody Bulletin of Natural History 60:55-79
+<a href="http://carolinafishes.github.io/images/B60-1-Dornburg_etal_pp55-79.pdf"> <en>pdf</en></a>
+
 <h3>2018</h3>
 
-<br>Daane, J.M., Dornburg, A., Smits, P., MacGuigan, D.J., Hawkins, M.B., Near, T.J., Detrich, H.W., Harris, M.P. Historical contingency shapes adaptive radiation in Antarctic fishes. Submitted to Science. <a href="https://www.biorxiv.org/content/biorxiv/early/2018/11/26/478842.full.pdf"> <en>BioRxiv</en></a>
-
 <br>Near, T.J., MacGuigan, D., Parker, C.E., Jones, C., Struthers, C., Dornburg, A. Phylogenetic analysis of Antarctic notothenioids illuminates the utility of RADseq for resolving Cenozoic adaptive radiations. Molecular Phylogenetics and Evolution 129: 268—279
-
-<br>Dornburg,A. Lamb, A.D., Warren, D. Watkins-Colwell, G., Lewbart, G.,Flowers, J. Are geckos paratenic hosts for Caribbean Island Acanthocephalans? Evidence from <i>Gonatodes antillensis</i> and a review of squamate reptiles acting as transport hosts. Peabody Bulletin of Natural History (accepted)
+<a href="http://carolinafishes.github.io/images/Near_et_al_2018_final.pdf"> <en>pdf</en></a>
 
 <br>Dornburg, A., Zhou, S., Townsend, J.P. Optimal rates for phylogenetic inference and experimental design in the era of genome-scale datasets. Systematic Biology 68:145–156 
+<a href="http://carolinafishes.github.io/images/Dornburg_Su_Townsend.pdf"> <en>pdf</en></a>
 
 <br>Iglesias, T.L.†, Dornburg, A.†, Warren, D.L., Wainwright, P.C., Schmitz, L. Economo, E.P. Eyes-Wide Shut: the impact of dim-light vision on neural investment in marine teleosts. Journal of Evolutionary Biology 31: 1082—1092(†co-first authors)
+<a href="http://carolinafishes.github.io/images/Eyes_Wide_shut_final.PDF"> <en>pdf</en></a>
 <br>
 <img class="b30" src="http://carolinafishes.github.io/images/JEBcover.jpg" alt="">
 <br><em>A photo I took of a <i>Sparisoma aurofrenatum </i>(redband parrotfish) settling in for the night made the cover of JEB!</em>
@@ -40,6 +59,7 @@ show_meta: false
 <h3>2017</h3>
 
 <br>Dornburg, A., Townsend, J.P., Wang, Z. Maximizing power in phylogenetics and phylogenomics: a perspective illuminated by fungal big data. In J.P Townsend & Z. Wang (Eds.). Fungal phyologenetics and phylogenomics (pp. 1—47). Advances in Genetics volume 100. Cambridge, MA: Academic Press
+<a href="http://carolinafishes.github.io/images/Advances-in_Genetics100.pdf"> <en>pdf</en></a>
 
 <br> Dornburg, A., Lamb, A., Federman, S., Jones, C. Near, T.J. Cradles and Museums of Antarctic Biodiversity.  Nature Ecology and Evolution. DOI: 10.1038/s41559-017-0239-y
 <a href="https://www.researchgate.net/publication/318660129_Cradles_and_museums_of_Antarctic_teleost_biodiversity?_iepl%5BviewId%5D=7VrdiZEkOGNKwKZwBr2HhzOe&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A318660129&_iepl%5BinteractionType%5D=publicationTitle"> <en>pdf</en></a>
