--- a/_posts/Highlights/2015-10-20-Media.md
+++ b/_posts/Highlights/2015-10-20-Media.md
@@ -25,6 +25,10 @@ show_meta: false
 <br><a href="https://onties.com/argentina/life-in-the-antarctic-ice-is-a-reflection-of-human-disease/"> <en>Onties (Argentina)</en></a>
 <br><a href="https://worldnewsbuz.com/life-in-antarcticas-ice-mirrors-human-disease-sciencedaily/"> <en>Worldnewsbuz</en></a>
 <br><a href="https://debatableape.com/life-in-antarcticas-ice-mirrors-human-disease-phys-org/"> <en>Debateable Ape</en></a>
+<br><a href="https://ckinfm.com/news/life-in-antarcticas-ice-mirrors-human-disease-phys-org/"> <en>Radio Cina (Montreal)</en></a>
+<br><a href="https://bioengineer.org/life-in-antarcticas-ice-mirrors-human-disease/"> <en>Bioengineer.org</en></a>
+<br><a href="https://sclate.com/philippines/life-in-the-antarctic-ice-reflects-human-illness/
+"> <en>sclate.com (Phillipines)</en></a>
 
 <h3>2018</h3>
 <br> Online Press
