--- a/_posts/Pubs/2015-01-07-reprints.md
+++ b/_posts/Pubs/2015-01-07-reprints.md
@@ -19,65 +19,65 @@ show_meta: false
 ---
 <h3>2019</h3>
 
-<br>Daane, J.M., Dornburg, A., Smits, P., MacGuigan, D.J., Hawkins, M.B., Near, T.J., Detrich, H.W., Harris, M.P. Historical contingency shapes adaptive radiation in Antarctic fishes. Nature Ecology and Evolution
-<a href="http://carolinafishes.github.io/images/Daane_et_al2019.pdf"> <en>pdf</en></a>
+<br>2019. Daane, J.M., Dornburg, A., Smits, P., MacGuigan, D.J., Hawkins, M.B., Near, T.J., Detrich, H.W., Harris, M.P. Historical contingency shapes adaptive radiation in Antarctic fishes. Nature Ecology and Evolution
+<a href="http://carolinafishes.github.io/images/Daane_et_al2019.pdf"> <en>pdf</en></a>          
 <a href="https://www.biorxiv.org/content/biorxiv/early/2018/11/26/478842.full.pdf"> <en>BioRxiv</en></a>
 
-<br>Field, D., Berv, J.S., Hsiang, A. Y., Lanfear, R., Landis, M.J., Dornburg, A. Timing the extant avian radiation: the rise of modern birds and the importance of modelling molecular rate variation. Bulletin of the American Museum of Natural History (accepted)
+<br>2019. Field, D., Berv, J.S., Hsiang, A. Y., Lanfear, R., Landis, M.J., Dornburg, A. Timing the extant avian radiation: the rise of modern birds and the importance of modelling molecular rate variation. Bulletin of the American Museum of Natural History (accepted)
 <a href="https://peerj.com/preprints/27521/"> <en>PeerJ preprint</en></a>
 
-<br>Phillips, A.J., Dornburg, A., Zapfe, K., James, S.W., Erseus, C., Anderson, F., Lemmon, A., Lemmon, E.M., Holland, S., Williams, B.W. Phylogenomic analysis of a putative missing link sparks reinterpretation of leech evolution. Submitted to Genome Biology and Evolution (accepted)
+<br>2019. Phillips, A.J., Dornburg, A., Zapfe, K., James, S.W., Erseus, C., Anderson, F., Lemmon, A., Lemmon, E.M., Holland, S., Williams, B.W. Phylogenomic analysis of a putative missing link sparks reinterpretation of leech evolution. Submitted to Genome Biology and Evolution (accepted)
 
-<br>Near, T.J., Ghezelayagh, A., Ojeda, F.P., Dornburg, A. Recent diversification in an ancient lineage of Notothenioid fishes. Polar Biology 42: 943—952 
+<br>2019. Near, T.J., Ghezelayagh, A., Ojeda, F.P., Dornburg, A. Recent diversification in an ancient lineage of Notothenioid fishes. Polar Biology 42: 943—952 
 <a href="http://carolinafishes.github.io/images/Near_et_alInPressBovichtus.pdf"> <en>pdf</en></a>
 
-<br>Parker, C.E., Dornburg, A., Domínguez-Domínguez, O., Pillar, K.R. Evidence of Bias? Assessing phylogenetic information to reveal uncertainty in historical data: an example using goodeines (Teleostei: Cyprinodontiformes: Goodeidae). Molecular Phylogenetics and Evolution 134: 282—290
+<br>2019. Parker, C.E., Dornburg, A., Domínguez-Domínguez, O., Pillar, K.R. Evidence of Bias? Assessing phylogenetic information to reveal uncertainty in historical data: an example using goodeines (Teleostei: Cyprinodontiformes: Goodeidae). Molecular Phylogenetics and Evolution 134: 282—290
 <a href="http://carolinafishes.github.io/images/Parker_et_al_2019.pdf"> <en>pdf</en></a>
 
-<br>Dornburg,A. Lamb, A.D., Warren, D. Watkins-Colwell, G., Lewbart, G.,Flowers, J. Are geckos paratenic hosts for Caribbean Island Acanthocephalans? Evidence from <i>Gonatodes antillensis</i> and a review of squamate reptiles acting as transport hosts. Peabody Bulletin of Natural History 60:55-79
+<br>2019. Dornburg,A. Lamb, A.D., Warren, D. Watkins-Colwell, G., Lewbart, G.,Flowers, J. Are geckos paratenic hosts for Caribbean Island Acanthocephalans? Evidence from <i>Gonatodes antillensis</i> and a review of squamate reptiles acting as transport hosts. Peabody Bulletin of Natural History 60:55-79
 <a href="http://carolinafishes.github.io/images/B60-1-Dornburg_etal_pp55-79.pdf"> <en>pdf</en></a>
 
 <h3>2018</h3>
 
-<br>Near, T.J., MacGuigan, D., Parker, C.E., Jones, C., Struthers, C., Dornburg, A. Phylogenetic analysis of Antarctic notothenioids illuminates the utility of RADseq for resolving Cenozoic adaptive radiations. Molecular Phylogenetics and Evolution 129: 268—279
+<br>2018. Near, T.J., MacGuigan, D., Parker, C.E., Jones, C., Struthers, C., Dornburg, A. Phylogenetic analysis of Antarctic notothenioids illuminates the utility of RADseq for resolving Cenozoic adaptive radiations. Molecular Phylogenetics and Evolution 129: 268—279
 <a href="http://carolinafishes.github.io/images/Near_et_al_2018_final.pdf"> <en>pdf</en></a>
 
-<br>Dornburg, A., Zhou, S., Townsend, J.P. Optimal rates for phylogenetic inference and experimental design in the era of genome-scale datasets. Systematic Biology 68:145–156 
+<br>2018. Dornburg, A., Zhou, S., Townsend, J.P. Optimal rates for phylogenetic inference and experimental design in the era of genome-scale datasets. Systematic Biology 68:145–156 
 <a href="http://carolinafishes.github.io/images/Dornburg_Su_Townsend.pdf"> <en>pdf</en></a>
 
-<br>Iglesias, T.L.†, Dornburg, A.†, Warren, D.L., Wainwright, P.C., Schmitz, L. Economo, E.P. Eyes-Wide Shut: the impact of dim-light vision on neural investment in marine teleosts. Journal of Evolutionary Biology 31: 1082—1092(†co-first authors)
+<br>2018. Iglesias, T.L.†, Dornburg, A.†, Warren, D.L., Wainwright, P.C., Schmitz, L. Economo, E.P. Eyes-Wide Shut: the impact of dim-light vision on neural investment in marine teleosts. Journal of Evolutionary Biology 31: 1082—1092(†co-first authors)
 <a href="http://carolinafishes.github.io/images/Eyes_Wide_shut_final.PDF"> <en>pdf</en></a>
 <br>
 <img class="b30" src="http://carolinafishes.github.io/images/JEBcover.jpg" alt="">
 <br><em>A photo I took of a <i>Sparisoma aurofrenatum </i>(redband parrotfish) settling in for the night made the cover of JEB!</em>
 <br>
-<br>Dornburg, A., Warren, D., Zapfe, K. Morris, R., Lamb, A., Hogue, G. Lukas, L. Wang, R. Testing ontogenetic patterns of sexual size dimorphism against expectations of the expensive tissue hypothesis, an intra-specic example using Oyster Toadfish (<i>Opsanus tau</i>). Ecology and Evolution 8 (7):3609—3616 <a href='https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.3835'><en>pdf</en></a>.
+<br>2018. Dornburg, A., Warren, D., Zapfe, K. Morris, R., Lamb, A., Hogue, G. Lukas, L. Wang, R. Testing ontogenetic patterns of sexual size dimorphism against expectations of the expensive tissue hypothesis, an intra-specic example using Oyster Toadfish (<i>Opsanus tau</i>). Ecology and Evolution 8 (7):3609—3616 <a href='https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.3835'><en>pdf</en></a>.
 <br>
 <img class="b30" src="http://carolinafishes.github.io/images/EEcover.jpg" alt="">
 <br><em>Katerina Zapfe's drawing of an <i>Opsanus Tau </i>(Oyster Toadfish) was chosen for the cover of the issue!</em>
 <br>
 <h3>2017</h3>
 
-<br>Dornburg, A., Townsend, J.P., Wang, Z. Maximizing power in phylogenetics and phylogenomics: a perspective illuminated by fungal big data. In J.P Townsend & Z. Wang (Eds.). Fungal phyologenetics and phylogenomics (pp. 1—47). Advances in Genetics volume 100. Cambridge, MA: Academic Press
+<br>2017. Dornburg, A., Townsend, J.P., Wang, Z. Maximizing power in phylogenetics and phylogenomics: a perspective illuminated by fungal big data. In J.P Townsend & Z. Wang (Eds.). Fungal phyologenetics and phylogenomics (pp. 1—47). Advances in Genetics volume 100. Cambridge, MA: Academic Press
 <a href="http://carolinafishes.github.io/images/Advances-in_Genetics100.pdf"> <en>pdf</en></a>
 
-<br> Dornburg, A., Lamb, A., Federman, S., Jones, C. Near, T.J. Cradles and Museums of Antarctic Biodiversity.  Nature Ecology and Evolution. DOI: 10.1038/s41559-017-0239-y
+<br>2017. Dornburg, A., Lamb, A., Federman, S., Jones, C. Near, T.J. Cradles and Museums of Antarctic Biodiversity.  Nature Ecology and Evolution. DOI: 10.1038/s41559-017-0239-y
 <a href="https://www.researchgate.net/publication/318660129_Cradles_and_museums_of_Antarctic_teleost_biodiversity?_iepl%5BviewId%5D=7VrdiZEkOGNKwKZwBr2HhzOe&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A318660129&_iepl%5BinteractionType%5D=publicationTitle"> <en>pdf</en></a>
 
-<br> Lamb, A.J., Watkins-Colwell, G.C., Moore, J.A., Iglesias, T., Warren, D.L., Brandley, M.C., Dornburg, A. Endolymphatic sac use and reproductive activity in the Lesser Antilles endemic gecko Gonatodes antillensis (Gekkota: Spaerodactylidae). Bulletin of the Peabody Museum of Natural History 58(1):17–29 
+<br>2017. Lamb, A.J., Watkins-Colwell, G.C., Moore, J.A., Iglesias, T., Warren, D.L., Brandley, M.C., Dornburg, A. Endolymphatic sac use and reproductive activity in the Lesser Antilles endemic gecko Gonatodes antillensis (Gekkota: Spaerodactylidae). Bulletin of the Peabody Museum of Natural History 58(1):17–29 
 <a href="https://www.researchgate.net/publication/316107244_Endolymphatic_Sac_Use_and_Reproductive_Activity_in_the_Lesser_Antilles_Endemic_Gecko_Gonatodes_antillensis_Gekkota_Sphaerodactylidae"> <en>pdf</en></a>
 
-<br>Chakrabarty, P, Faircloth, B.C., Ludt, W.B, McMahan, C.D., Near, T.J, Dornburg, A., Albert, J.S., Arroyave, J., Stiassny, M.J., Sorenson, L., Alfaro, M.E. Phylogenomic Systematics of Ostariophysan fishes: Ultraconserved Elements Support the Surprising Non-monophyly of Characiformes. Systematic Biology DOI:10.1093/sysbio/syx038
+<br>2017. Chakrabarty, P, Faircloth, B.C., Ludt, W.B, McMahan, C.D., Near, T.J, Dornburg, A., Albert, J.S., Arroyave, J., Stiassny, M.J., Sorenson, L., Alfaro, M.E. Phylogenomic Systematics of Ostariophysan fishes: Ultraconserved Elements Support the Surprising Non-monophyly of Characiformes. Systematic Biology DOI:10.1093/sysbio/syx038
 <a href="https://www.researchgate.net/publication/316442217_Phylogenomic_Systematics_of_Ostariophysan_Fishes_Ultraconserved_Elements_Support_the_Surprising_Non-Monophyly_of_Characiformes"> <en>pdf</en></a>
 <br>
 <img class="b30" src="http://carolinafishes.github.io/images/Sysbio.jpg" alt="">
 
-<br>Dornburg, A., Townsend, J.P., Spriggs, E., Eytan, R.I., Moore, J.A., Wainwright, P.C.,Lemmon, A.R., Moriarty Lemmon, E., Near, T.J. Phylogenetic informativeness facilitates resolution of the sister lineage to percomorpha with an anchored hybrid enrichment dataset. Molecular Phylogenetics and Evolution 110: 27-38
+<br>2017. Dornburg, A., Townsend, J.P., Spriggs, E., Eytan, R.I., Moore, J.A., Wainwright, P.C.,Lemmon, A.R., Moriarty Lemmon, E., Near, T.J. Phylogenetic informativeness facilitates resolution of the sister lineage to percomorpha with an anchored hybrid enrichment dataset. Molecular Phylogenetics and Evolution 110: 27-38
 <a href="https://www.researchgate.net/publication/314104725_New_Insights_on_the_Sister_Lineage_of_Percomorph_Fishes_with_an_Anchored_Hybrid_Enrichment_Dataset"> <en>pdf</en></a>
 
 <h3>2016</h3>
 
-<br>Dornburg, A., Tamagnon, J., Townsend, J.P. PhyInformR: Phylogenetic experimental design and phylogenomic data exploration. BMC Evolutionary Biology 16 (1): 262
+<br>2016. Dornburg, A., Tamagnon, J., Townsend, J.P. PhyInformR: Phylogenetic experimental design and phylogenomic data exploration. BMC Evolutionary Biology 16 (1): 262
 <a href="https://www.researchgate.net/publication/311339907_PhyInformR_phylogenetic_experimental_design_and_phylogenomic_data_exploration_in_R?_iepl%5BviewId%5D=QY11lOKtnAo1velxe774CFf9&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A311339907&_iepl%5BinteractionType%5D=publicationTitle"> <en>pdf</en></a>
 
 <br>2016.  Dornburg, A., Forrestel, E., Moore, J.A., Iglesias, T.L., Jones, A., Rao,
