post on parker et al paper

--- a/_posts/Highlights/2017-04-24-parasite.md
+++ b/_posts/Highlights/2017-04-24-parasite.md
@@ -26,7 +26,7 @@ She emailed me some photos asking what these were. I had never seen anything lik
 April brought back some of the infected geckos from the field and we brought them to the lab of parasitologist <a href='https://cvm.ncsu.edu/directory/flowers-james/'>Dr. James Flowers</a>. He quickly identified the subcutaneous cysts as cystacanths of <i>Oncicola</i> likely <i>Oncicola venezuelensis</i>. Here is what is odd. <i>Oncicola</i> starts its life in termites and finishes its life in mammals such as cats. What was it doing in small ground dwelling gecko? 
 <br>
 <br>
-<img class="b30" src="http://carolinafishes.github.io/images/gecko_parasite1.png" alt=""><em> A. Image of individual <i>G. antillensis</i> with visible subcutaneous cystacnaths highlighted. Taken from our upcoming paper (link coming soon!)</em>
+<img class="b30" src="http://carolinafishes.github.io/images/gecko_parasite1.png" alt=""><em> A. Image of individual <i>G. antillensis</i> with visible subcutaneous cystacnaths highlighted. Taken from our upcoming paper <a href="http://carolinafishes.github.io/images/B60-1-Dornburg_etal_pp55-79.pdf"> <en>pdf</en></a></em>
 <br>
 <br>
 What April had stumbled upon turned out to be the first observation of <i>Gonatodes antillensis</i> acting as a transport host for a species of <i>Oncicola</i>, a type of spiny-head worm (Acanthocephala) Although numerous parasites start their lives in invertebrates and must somehow get to various birds or mammals, transport hosts are woefully understudied. This is particularly true for squamate reptiles. James and I scoured the literature and found that for the Carribean, almost all records of squamates acting as hosts came from the observations in <i>Anolis </i>lizards. 
