link errors on boneless post

--- a/_posts/Highlights/2019-06-01-Boneloss.md
+++ b/_posts/Highlights/2019-06-01-Boneloss.md
@@ -31,7 +31,7 @@ We found that the massive amount of genetic change required for life in the Anta
 These genetic changes not only have major implications for understanding the evolution of Antarctica's unusual animals, but also highlight that some key adaptations used by fishes mirror the genetics of human  disease.
 <br>
 <br>
-<img class="b30" src="http://carolinafishes.github.io/images/Boneloss4.png" alt=""><em> Some of the over 100 species of Notothenioids that have taken over the Antarctic. Photos from T. Near </en></a></em>
+<img class="b30" src="http://carolinafishes.github.io/images/Boneloss4.png" alt=""><em> Some of the over 100 species of Notothenioids that have taken over the Antarctic. Photos from T. Near </em>
 
 Specifically, we saw changes in key genes linked to human bones diseases also changing the level of skeletal bone density in these fish. These genes have been long been linked to human birth defects and skeletal disorders.
 <br>
@@ -46,7 +46,7 @@ In our case, we found that an increase in mutation rate prior to the onset of po
 The ecological relevance for this is that Antarctic notothenioids don't have swim bladders to adjust their buoyancy in water. Instead they use reductions in bone density to help them 'float' in the water column at low energetic cost.
 <br>
 <br>
-<img class="b30" src="http://carolinafishes.github.io/images/Boneloss2.png" alt=""><em> Depiction of the loss of bone based on CT-scans </en></a></em>
+<img class="b30" src="http://carolinafishes.github.io/images/boneloss2.png" alt=""><em> Depiction of the loss of bone based on CT-scans </em>
 <br>
 <br>
 Basically, what is a genetic disease state in us is a means of survival in these fishes.
@@ -61,7 +61,7 @@ Finding that notothenioids use the same genetic pathways to achieve buoyancy in 
 To test the function of the genetic changes identified, we used advances in gene editing to engineer genetically modified zebrafish embryos with the same mutations as Antarctic notothenioids. As these zebrafish grew, they displayed the same loss of bone as observed in the Antarctic species.
 <br>
 <br>
-<img class="b30" src="http://carolinafishes.github.io/images/Boneloss3.png" alt=""><em> Genetically engineered zebrafish mirroring the loss of bone in notothenioids along the same genetic pathways as human bone disease. </en></a></em>
+<img class="b30" src="http://carolinafishes.github.io/images/boneloss3.png" alt=""><em> Genetically engineered zebrafish mirroring the loss of bone in notothenioids along the same genetic pathways as human bone disease. </em>
 <br>
 <br>
 Our research is revealing Antarctic notothenioids to be important models for human disease. In addition to low bone density, Antarctic fishes also have evolved other apparently pathological conditions, including the loss of kidney glomeruli and red blood cells.
