--- a/_posts/software/2019-8-01-TOAST.md
+++ b/_posts/software/2019-8-01-TOAST.md
@@ -2,18 +2,18 @@
 layout: page
 title:  "TOAST: Transcriptome Ortholog Alignment Tools"
 
-teaser: "Harness more data"
+teaser: "Harness Sequence Data"
 categories:
     - software
 tags:
     - software TOAST
     
 image:
-   thumb: "TOASTpage.jpg"
+   thumb: "TOASTpage_alt.jpg"
 header:
-    image_fullwidth: "TOASTpage.jpg"
+    image_fullwidth: "TOASTpage_alt.jpg"
     title: ""
-    caption: Snake River, Eastern Washington 
+    caption: Grand Coulee Dam, Washington 
 show_meta: false    
 ---
 <img class="b30" src="http://carolinafishes.github.io/images/Toast_1.png" alt="">
@@ -21,7 +21,13 @@ show_meta: false
 We introduce TOAST, open source software designed to help you use BUSCO to effectively harness public data, visualize missing data patterns, and assemble alignemts. 
 <br>
 <br>
-<a href='https://github.com/carolinafishes/TOAST'> TOAST can be downloaded here and requires R. Note the BUSCO is limited to LINUX, so you can only use the download and sequence extraction functions relying on BUSCO in LINUX. You can use TOAST to visualize missing data patterns or assemble alignments on any platform. </a> 
+TOAST can be downloaded <a href='https://github.com/carolinafishes/TOAST'>  here </a>and requires R. 
+<br>
+<br>
+Note the BUSCO is limited to LINUX, so you can only use the download and sequence extraction functions relying on BUSCO in LINUX. 
+<br>
+<br>
+You can use TOAST to visualize missing data patterns or assemble alignments on any platform.  
 <br>
 <br> 
 <a href="http://carolinafishes.github.io/images/TOAST_manual.pdf"><en>A manual is available here</en></a>
