toast page update
new image makes more sense

--- a/_posts/software/2019-8-01-TOAST.md
+++ b/_posts/software/2019-8-01-TOAST.md
@@ -9,14 +9,13 @@ tags:
     - software TOAST
     
 image:
-   thumb: "TOASTpage_alt.jpg"
+   thumb: "TOASTpage_alt2.jpg"
 header:
-    image_fullwidth: "TOASTpage_alt.jpg"
+    image_fullwidth: "TOASTpage_alt2.jpg"
     title: ""
     caption: Grand Coulee Dam, Washington 
 show_meta: false    
 ---
-<img class="b30" src="http://carolinafishes.github.io/images/Toast_1.png" alt="">
 <br>
 We introduce TOAST, open source software designed to help you use BUSCO to effectively harness public data, visualize missing data patterns, and assemble alignemts. 
 <br>
