random colon crashes page
removed

--- a/_posts/software/2019-8-01-TOAST.md
+++ b/_posts/software/2019-8-01-TOAST.md
@@ -13,7 +13,7 @@ image:
 header:
     image_fullwidth: "TOASTpage_alt2.jpg"
     title: ""
-    caption: Image: Punta Arenas, Chile
+    caption: Punta Arenas, Chile
 show_meta: false    
 ---
 <br>
