--- a/_posts/software/2019-8-01-TOAST.md
+++ b/_posts/software/2019-8-01-TOAST.md
@@ -14,6 +14,7 @@ header:
     image_fullwidth: "TOASTpage_alt2.jpg"
     title: ""
     caption: Punta Arenas, Chile
+comments: true
 show_meta: false    
 ---
 <br>
