main page update

--- a/_posts/software/2019-8-01-TOAST.md
+++ b/_posts/software/2019-8-01-TOAST.md
@@ -9,9 +9,9 @@ tags:
     - software TOAST
     
 image:
-   thumb: "TOASTpage_alt2.jpg"
+   thumb: "TOASTpage_alta.jpg"
 header:
-    image_fullwidth: "TOASTpage_alt2.jpg"
+    image_fullwidth: "TOASTpage_alta.jpg"
     title: ""
     caption: Punta Arenas, Chile
 comments: true
@@ -29,6 +29,7 @@ Note the BUSCO is limited to LINUX, so you can only use the download and sequenc
 <br>
 You can use TOAST to visualize missing data patterns or assemble alignments on any platform.  
 <br>
+<img class="b30" src="https://carolinafishes.github.io/images/TOASTpage_alt2.jpg" alt="">
 <br> 
 <a href="http://carolinafishes.github.io/images/TOAST_manual.pdf"><en>A manual is available here</en></a>
 <br>
