--- a/_posts/software/2019-8-01-TOAST.md
+++ b/_posts/software/2019-8-01-TOAST.md
@@ -13,7 +13,7 @@ image:
 header:
     image_fullwidth: "TOASTpage_alta.jpg"
     title: ""
-    caption: Punta Arenas, Chile
+    caption: Grand Coulee Dam
 comments: true
 show_meta: false    
 ---
