Final phase of TOAST manual update
working on updating toast to be ready for general beta testing

--- a/_posts/software/2019-8-01-TOAST.md
+++ b/_posts/software/2019-8-01-TOAST.md
@@ -18,13 +18,13 @@ comments: true
 show_meta: false    
 ---
 <br>
-We introduce TOAST, open source software designed to help you use BUSCO to effectively harness public data, visualize missing data patterns, and assemble alignemts. 
+We introduce TOAST, open source software designed to help you use BUSCO to effectively harness public data, visualize missing data patterns, and assemble multiple sequence alignments. 
 <br>
 <br>
 TOAST can be downloaded <a href='https://github.com/carolinafishes/TOAST'>  here </a>and requires R. 
 <br>
 <br>
-Note the BUSCO is limited to LINUX, so you can only use the download and sequence extraction functions relying on BUSCO in LINUX. 
+Note that BUSCO is limited to LINUX, so you can only use the download and sequence extraction functions relying on BUSCO in LINUX. 
 <br>
 <br>
 You can use TOAST to visualize missing data patterns or assemble alignments on any platform.  
@@ -34,7 +34,7 @@ You can use TOAST to visualize missing data patterns or assemble alignments on a
 <a href="http://carolinafishes.github.io/images/TOAST_manual.pdf"><en>A manual is available here</en></a>
 <br>
 <br> 
-<br> A web based walthrough of TOAST is available in three parts:
+<br> A web based walkthrough of TOAST is available in three parts:
 <br>
 <br>
 <a href='http://carolinafishes.github.io/software/TOAST_manual/'>Part1: Installation, dependencies, notes on LINUX and BUSCO installation</a>
