fixed toast overview
is now updated to include Mac users

--- a/_posts/software/2019-8-01-TOAST.md
+++ b/_posts/software/2019-8-01-TOAST.md
@@ -24,7 +24,7 @@ We introduce TOAST, open source software designed to help you use BUSCO to effec
 TOAST can be downloaded <a href='https://github.com/carolinafishes/TOAST'>  here </a>and requires R. 
 <br>
 <br>
-Note that BUSCO is limited to LINUX, so you can only use the download and sequence extraction functions relying on BUSCO in LINUX. 
+Note that BUSCO is limited to UNIX (Mac and Linux) systems, so you can only use the download and sequence extraction functions relying on BUSCO in Unix (Mac and Linux) systems. Missing data visualizations will work on all platforms. 
 <br>
 <br>
 You can use TOAST to visualize missing data patterns or assemble alignments on any platform.  
