added manual for TOAST

--- a/_posts/software/2019-8-01-TOAST.md
+++ b/_posts/software/2019-8-01-TOAST.md
@@ -31,7 +31,7 @@ You can use TOAST to visualize missing data patterns or assemble alignments on a
 <br>
 <img class="b30" src="https://carolinafishes.github.io/images/TOASTpage_alt2.jpg" alt="">
 <br> 
-<a href="http://carolinafishes.github.io/images/TOAST_manual.pdf"><en>A manual is available here</en></a>
+<a href="http://carolinafishes.github.io/images/TOAST_User_Manualv2.pdf"><en>A manual is available here</en></a>
 <br>
 <br> 
 <br> A web based walkthrough of TOAST is available in three parts:
